# aqa-test-tools

./: .docker.env  .gitignore  CONTRIBUTING.md  README.md  Version1.ipynb  docker-compose.yml  exportMongo.sh  fix.txt  netlify.toml  package-lock.json  package.json
BugPredict/: gw.sh
Chatbot/: .gitignore  file.py  myKeys.sh
CommitHunter/: commit_hunter.py  commit_hunter.sh
MachineLearningPrototype/: CHANGELOG.md  DLGitIssuesAnalysis.ipynb  README.md  collect_data.py
PerfNext/: .gitignore  README.md  app.js  logo.txt  manifest.yml  package-lock.json  package.json  script_header.sh  setup.sh
SmartMedia/: README.md
TestResultSummaryService/: .Database.js.swp  .gitignore  .trssConf.json.swp  ArgParser.js  BuildMonitor.js  BuildProcessor.js  DashboardBuildInfo.json  DataManager.js  Database.js  Dockerfile  EventHandler.js  JenkinsApiQuery.js  JenkinsInfo.js  LogStream.js  (+9 more)
VitAI/: .env.example  README.md  agent.py  main.py  pyproject.toml
VitAI/RAG/: README.md  embedding.py  indexer.py  main.py  merkle_tree.py  merkle_trees.db  requirements.txt  store.py
VitAI/RAG/VectorStore/adoptium_STF/: metadata.json
VitAI/RAG/VectorStore/adoptium_TKG/: index.faiss  metadata.json
VitAI/RAG/VectorStore/adoptium_aqa-test-tools/: metadata.json
VitAI/RAG/VectorStore/adoptium_bumblebench/: index.faiss  metadata.json
VitAI/RAG/VectorStore/adoptium_run-aqa/: index.faiss  metadata.json
VitAI/RAG/src/: embedding.py
VitAI/VectorStore/: metadata.json
VitAI/data/: ideal_answers.json
VitAI/src/: __init__.py  indexer.py  main.py  store.py
VitAI/test/: test_similarity.py
(+346 files in other folders)
